# chip

./: .dockerignore  .env.production.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SCALING.md  SECURITY.md  deny.toml  docker-compose.prod.yml  docker-compose.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/chip-cli/: Cargo.toml
crates/chip-cli/src/: agent.rs  import.rs  main.rs  remote.rs  render.rs  ssh.rs  sync.rs
crates/chip-core/: Cargo.toml
crates/chip-core/src/: change.rs  dag.rs  diff.rs  error.rs  evolution.rs  hash.rs  lib.rs  merge.rs  object.rs  oplog.rs  ops.rs  refs.rs  repo.rs  working_copy.rs
crates/chip-core/src/store/: backend.rs  mod.rs
crates/chip-core/tests/: workflow.rs
crates/chip-proto/: Cargo.toml  build.rs
crates/chip-proto/src/: lib.rs
crates/chip-server/: Cargo.toml
crates/chip-server/src/: auth.rs  cache.rs  config.rs  crypto.rs  db.rs  grpc.rs  highlight.rs  main.rs  ratelimit.rs  render_cache.rs  review.rs  ssh.rs  store.rs  validate.rs  web.rs
migrations/: 0001_init.sql  0002_token_expiry.sql  0003_scale.sql  0004_ssh_keys.sql  0005_repo_description.sql  0006_change_requests.sql
proto/: chip.proto
scripts/: e2e.sh
