[package]
name = "chip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
zstd.workspace = true
serde.workspace = true
bincode.workspace = true
diffy.workspace = true
similar.workspace = true
walkdir.workspace = true
ignore.workspace = true
rand.workspace = true
time.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tempfile.workspace = true
